--- a/backend/makefile
+++ b/backend/makefile
@@ -1,6 +1,8 @@
 deps:
 	go get -d ./...
 
-run:
-	go build -o main.out main.go
-	./main.out 
+dev:
+	docker compose -f scripts/docker-compose.yml up	--build
+
+dev/clean:
+	docker compose -f scripts/docker-compose.yml down	
