--- a/backend/scripts/docker-compose.yml
+++ b/backend/scripts/docker-compose.yml
@@ -1,9 +1,12 @@
 version: "3.9"
 services:
   api:
-    build: ./backend
+    build:
+      context: ../
+      dockerfile: ./scripts/dev.Dockerfile
+    command: "sh scripts/dev.sh"
     volumes:
-      - ./backend:/go/src/app
+      - ../:/app
     depends_on:
       - db
     ports:
