Get docker working
Also adding base64 encoding of a service account

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,7 @@ indent_size = 2
 
 [*.go]
 indent_style = tab
+
+[{makefile,**.mk}]
+# Use tabs for indentation (Makefiles require tabs)
+indent_style = tab
